# Book-Worms

./: .gitignore  Account-Main-Page.pro  Account-Page-User-Profile.pro  Account.db3  CMakeLists.txt  Items.db3  Library_System.pro  README.md  account.hpp  account_main_page.cpp  account_main_page.h  account_page_user_profile.ui  accountwidget.h  accountwidget.ui  adminpage.cpp  adminpage.ui  bookdialog.cpp  cddialog.cpp  collection.hpp  collectiondialog.cpp  collectiondialog.hpp  coordinator.hpp  dvd.hpp  dvddialog.cpp  dvddialog.hpp  dvddialog.ui  item.cpp  library.cpp  library.hpp  libraryLogin.ui  libraryitemfactory.cpp  libraryitemmodel.cpp  libraryitemmodel.hpp  libraryitemproxymodel.hpp  libraryview.cpp  libraryview.hpp  libraryview.ui  main.cpp  mock_library_item_component.hpp  mock_user_account.hpp  (+2 more)
databases/: Account (copy).db3  Account.db3  collection_item (copy).sqlite  collection_item.sql  collections.sql  collections.sqlite  items (copy).sql  items (copy).sqlite
forms/: accountwidget.ui  adminpage.ui  bookdialog.ui  cddialog.ui  collectiondialog.ui  createAccountPage.ui  dvddialog.ui  library.ui  libraryLogin.ui  libraryview.ui  userprofiledialog.ui
header/: .cd.hpp.un~  account.hpp  account_page_user_profile.h  accountwidget.h  add_book.hpp  add_cd.hpp  add_collection.hpp  add_dvd.hpp  add_strat.hpp  addstrat.hpp  admin.hpp  adminpage.hpp  book.hpp  bookdialog.hpp  cd.hpp  cd.hpp~  cddialog.hpp  collection.hpp  collectiondialog.hpp  communicator.hpp  coordinator.hpp  createAccountPage.h  createAccountPage.hpp  dvd.hpp  dvddialog.hpp  item.hpp  library.hpp  (+22 more)
(+73 files in other folders)
